@@ -7,33 +7,38 @@
     <build>
         <plugins>
             <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <groupId>org.apache.maven.plugins</groupId>
+                <version>3.14.0</version>
+            </plugin>
+            <plugin>
                 <artifactId>maven-war-plugin</artifactId>
                 <groupId>org.apache.maven.plugins</groupId>
-                <version>3.3.1</version>
+                <version>3.4.0</version>
             </plugin>
             <!-- Tests -->
-            <plugin>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <dependencies>
-                    <dependency>
-                        <artifactId>junit-jupiter-engine</artifactId>
-                        <groupId>org.junit.jupiter</groupId>
-                        <version>5.7.2</version>
-                    </dependency>
-                </dependencies>
-                <groupId>org.apache.maven.plugins</groupId>
-                <version>3.0.0-M4</version>
-            </plugin>
-            <plugin>
-                <artifactId>maven-failsafe-plugin</artifactId>
-                <configuration>
-                    <argLine>
-                        --illegal-access=permit
-                    </argLine>
-                </configuration>
-                <groupId>org.apache.maven.plugins</groupId>
-                <version>2.22.2</version>
-            </plugin>
+<!--            <plugin>-->
+<!--                <artifactId>maven-surefire-plugin</artifactId>-->
+<!--                <dependencies>-->
+<!--                    <dependency>-->
+<!--                        <artifactId>junit-jupiter-engine</artifactId>-->
+<!--                        <groupId>org.junit.jupiter</groupId>-->
+<!--                        <version>5.13.4</version>-->
+<!--                    </dependency>-->
+<!--                </dependencies>-->
+<!--                <groupId>org.apache.maven.plugins</groupId>-->
+<!--                <version>3.5.3</version>-->
+<!--            </plugin>-->
+<!--            <plugin>-->
+<!--                <artifactId>maven-failsafe-plugin</artifactId>-->
+<!--                <configuration>-->
+<!--                    <argLine>-->
+<!--                        &#45;&#45;illegal-access=permit-->
+<!--                    </argLine>-->
+<!--                </configuration>-->
+<!--                <groupId>org.apache.maven.plugins</groupId>-->
+<!--                <version>3.5.3</version>-->
+<!--            </plugin>-->
             <plugin>
                 <artifactId>payara-micro-maven-plugin</artifactId>
                 <configuration>
@@ -52,7 +57,7 @@
                             <value>member</value>
                         </option>
                     </javaCommandLineOptions>
-                    <payaraVersion>6.2022.1</payaraVersion>
+                    <payaraVersion>6.2025.7</payaraVersion>
                     <useUberJar>true</useUberJar>
                 </configuration>
                 <executions>
@@ -63,7 +68,7 @@
                     </execution>
                 </executions>
                 <groupId>fish.payara.maven.plugins</groupId>
-                <version>2.0</version>
+                <version>2.4</version>
             </plugin>
             <!-- Coveralls -->
             <plugin>
@@ -106,7 +111,7 @@
                     </execution>
                 </executions>
                 <groupId>org.jacoco</groupId>
-                <version>0.8.7</version>
+                <version>0.8.13</version>
             </plugin>
         </plugins>
     </build>
@@ -116,23 +121,23 @@
             <artifactId>jakarta.jakartaee-api</artifactId>
             <groupId>jakarta.platform</groupId>
             <scope>provided</scope>
-            <version>9.1.0</version>
+            <version>10.0.0</version>
         </dependency>
         <dependency>
             <artifactId>postgresql</artifactId>
             <groupId>org.postgresql</groupId>
-            <version>42.5.4</version>
+            <version>42.7.7</version>
         </dependency>
         <dependency>
             <artifactId>javamelody-core</artifactId>
             <groupId>net.bull.javamelody</groupId>
-            <version>2.0.0</version>
+            <version>2.5.0</version>
         </dependency>
         <dependency>
             <artifactId>primefaces</artifactId>
             <classifier>jakarta</classifier>
             <groupId>org.primefaces</groupId>
-            <version>11.0.0</version>
+            <version>14.0.12</version>
         </dependency>
         <dependency>
             <artifactId>bootstrap</artifactId>
@@ -152,12 +157,12 @@
         <dependency>
             <artifactId>spring-security-crypto</artifactId>
             <groupId>org.springframework.security</groupId>
-            <version>5.6.5</version>
+            <version>6.5.2</version>
         </dependency>
         <dependency>
             <artifactId>commons-logging</artifactId>
             <groupId>commons-logging</groupId>
-            <version>1.2</version>
+            <version>1.3.5</version>
         </dependency>
         <dependency>
             <artifactId>hibernate-core-jakarta</artifactId>
@@ -169,23 +174,23 @@
             <artifactId>lombok</artifactId>
             <groupId>org.projectlombok</groupId>
             <scope>provided</scope>
-            <version>1.18.20</version>
+            <version>1.18.38</version>
         </dependency>
         <dependency>
             <artifactId>liquibase-core</artifactId>
             <groupId>org.liquibase</groupId>
-            <version>4.23.0</version>
+            <version>4.33.0</version>
         </dependency>
         <!-- Data Exporter -->
         <dependency>
             <artifactId>poi</artifactId>
             <groupId>org.apache.poi</groupId>
-            <version>4.1.1</version>
+            <version>5.4.1</version>
         </dependency>
         <dependency>
             <artifactId>poi-ooxml</artifactId>
             <groupId>org.apache.poi</groupId>
-            <version>5.2.3</version>
+            <version>5.4.1</version>
         </dependency>
         <dependency>
             <artifactId>itext</artifactId>
@@ -210,20 +215,20 @@
         <dependency>
             <artifactId>commons-lang3</artifactId>
             <groupId>org.apache.commons</groupId>
-            <version>3.12.0</version>
+            <version>3.18.0</version>
         </dependency>
         <!-- Tests -->
         <dependency>
             <artifactId>junit-jupiter-api</artifactId>
             <groupId>org.junit.jupiter</groupId>
             <scope>test</scope>
-            <version>5.9.1</version>
+            <version>5.13.4</version>
         </dependency>
         <dependency>
             <artifactId>mockito-junit-jupiter</artifactId>
             <groupId>org.mockito</groupId>
             <scope>test</scope>
-            <version>3.11.2</version>
+            <version>5.18.0</version>
         </dependency>
         <!-- End Tests -->
     </dependencies>
@@ -248,8 +253,8 @@
         <additionalparam>-Xdoclint:none</additionalparam>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
         <failOnMissingWebXml>false</failOnMissingWebXml>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <skipUnitTests>false</skipUnitTests>
     </properties>
